crates/cribo/tests/snapshots/bundled_code@importlib_preserved_eviction_reimport.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_preserved_eviction_reimport/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        if self._namespace is not None:
            return self._namespace
        if self._entry[1] is not None:
            return globals()[self._entry[1]]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        if getattr(module, '_cribo_machinery_loaded', False):
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__dict__.clear()
            module.__dict__.update(state)
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('evicted_helper', '_cribo_init___cribo_3f1fc4_evicted_helper', 'evicted_helper', False)
evicted_helper = _cribo.types.SimpleNamespace(__name__='evicted_helper', __initializing__=False, __initialized__=False)
_cribo_finder.bind('evicted_helper', evicted_helper)
def _cribo_init___cribo_3f1fc4_evicted_helper(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = ''
    self.__spec__ = None
    try:
        _sys.modules[self.__name__] = self
        print("evicted_helper body runs")
        VALUE = "fresh"
        self.VALUE = VALUE
        self.__initialized__ = True
        self.__initializing__ = False
        return _sys.modules.get(self.__name__, self)
    except BaseException:
        self.__initializing__ = False
        if _sys.modules.get(self.__name__) is self:
            del _sys.modules[self.__name__]
        raise
evicted_helper.__init__ = _cribo_init___cribo_3f1fc4_evicted_helper
"""Evicting a preserved import from sys.modules re-executes the module.\n\nPython creates and executes a fresh module after `sys.modules.pop`; the\nbundle's loader must reset the wrapper state so the body runs again instead\nof returning the stale initialized namespace.\n"""
importlib = _cribo.importlib
sys = _cribo.sys
def load(**options):
    return importlib.import_module("evicted_helper", **options)
first = load()
print("first VALUE:", first.VALUE)
_cribo.sys.modules.pop("evicted_helper")
second = load()
print("second VALUE:", second.VALUE)
