crates/cribo/tests/snapshots/bundled_code@importlib_preserved_lazy.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_preserved_lazy/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        if self._namespace is not None:
            return self._namespace
        if self._entry[1] is not None:
            return globals()[self._entry[1]]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        if getattr(module, '_cribo_machinery_loaded', False):
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__dict__.clear()
            module.__dict__.update(state)
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('untouched_helper', '_cribo_init___cribo_5af165_untouched_helper', 'untouched_helper', False)
_cribo_finder.register('lazy_helper', '_cribo_init___cribo_5e52f3_lazy_helper', 'lazy_helper', False)
lazy_helper = _cribo.types.SimpleNamespace(__name__='lazy_helper', __initializing__=False, __initialized__=False)
_cribo_finder.bind('lazy_helper', lazy_helper)
def _cribo_init___cribo_5e52f3_lazy_helper(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = ''
    self.__doc__ = None
    print("lazy_helper imported")
    VALUE = "lazy value"
    self.VALUE = VALUE
    self.__initialized__ = True
    self.__initializing__ = False
    return self
lazy_helper.__init__ = _cribo_init___cribo_5e52f3_lazy_helper
untouched_helper = _cribo.types.SimpleNamespace(__name__='untouched_helper', __initializing__=False, __initialized__=False)
_cribo_finder.bind('untouched_helper', untouched_helper)
def _cribo_init___cribo_5af165_untouched_helper(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = ''
    self.__doc__ = None
    print("untouched_helper imported")
    VALUE = "never seen"
    self.VALUE = VALUE
    self.__initialized__ = True
    self.__initializing__ = False
    return self
untouched_helper.__init__ = _cribo_init___cribo_5af165_untouched_helper
importlib = _cribo.importlib
def load_later(**options):
    return importlib.import_module("lazy_helper", **options)
def never_called(**options):
    return importlib.import_module("untouched_helper", **options)
print("before any import")
print(load_later().VALUE)
